--- a/index.html
+++ b/index.html
@@ -163,34 +163,40 @@
         </header>
 
         <main class="trips-grid">
-            <a href="caribbean-cruise-2024.html" class="trip-card">
-                <div class="trip-title">Caribbean Cruise Adventure</div>
-                <div class="trip-date">June 15-25, 2024</div>
-                <div class="trip-status">Upcoming</div>
+            <a href="Welford_Europe_2025.html" class="trip-card">
+                <div class="trip-title">Welford London Paris Rome</div>
+                <div class="trip-date">May 23 - June 1, 2025</div>
+                <div class="trip-status">Pending</div>
             </a>
 
-            <a href="mediterranean-2024.html" class="trip-card">
-                <div class="trip-title">Mediterranean Odyssey</div>
+            <a href="Jones_England_2025.html" class="trip-card">
+                <div class="trip-title">Sara and Darren's Anniversary Trip</div>
                 <div class="trip-date">July 1-15, 2024</div>
+                <div class="trip-status">Pending</div>
+            </a>
+
+            <a href="Davidson_Cruise_2025.html" class="trip-card">
+                <div class="trip-title">Davidson Alaska Cruise 2025</div>
+                <div class="trip-date">May 6 - 16, 2025</div>
+                <div class="trip-status">Current</div>
+            </a>
+
+            <a href="Miller_Ireland_2025.html" class="trip-card">
+                <div class="trip-title">Miller Ireland Trip July 2025</div>
+                <div class="trip-date">TBD July 2025</div>
                 <div class="trip-status">Planning</div>
             </a>
 
-            <a href="alaska-expedition.html" class="trip-card">
-                <div class="trip-title">Alaska Expedition</div>
-                <div class="trip-date">August 5-15, 2024</div>
-                <div class="trip-status">Planning</div>
+            <a href="Mam_Scotland.html" class="trip-card">
+                <div class="trip-title">Mam, Kim, and Neil Scotland</div>
+                <div class="trip-date">April 2025</div>
+                <div class="trip-status">Current</div>
             </a>
 
-            <a href="european-river-cruise.html" class="trip-card">
-                <div class="trip-title">European River Cruise</div>
-                <div class="trip-date">September 10-24, 2024</div>
-                <div class="trip-status">Planning</div>
-            </a>
-
-            <a href="hawaii-cruise.html" class="trip-card">
-                <div class="trip-title">Hawaiian Island Hopping</div>
-                <div class="trip-date">October 1-12, 2024</div>
-                <div class="trip-status">Planning</div>
+                <a href="Henderson_Cruise_2025.html" class="trip-card">
+                <div class="trip-title">Kim Haley and Dylan Carribean Cruise</div>
+                <div class="trip-date">March 2025</div>
+                <div class="trip-status">Current</div>
             </a>
         </main>
 
